[package]
name = "port_proxy"
version = "0.1.0"
edition = "2021"
default-run = "port_proxy"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
dashmap = "6.1.0"
fastrand = "2.1.1"
futures-util = { version = "0.3.21", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
axum = "0.7.7"
reqwest = "0.12.8"
